--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -200,9 +200,7 @@
         display: flex;
         align-items: center;
         gap: 7px;
-        margin-left: 14px;
-        margin-top: 20px;
-        margin-bottom: 30px;
+        margin: 20px;
     }
 
     &__link {
