--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,3 +3,15 @@
     transition-property: $prop;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@mixin section-paddings {
+    @include for-mobile-and-tablet {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    @include for-desktop {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+}
