--- a/css/main.css
+++ b/css/main.css
@@ -368,35 +368,53 @@ img {
   }
 }
 
+.work__section {
+  padding-top: 60px;
+}
 @media only screen and (min-width: 1200px) {
   .work__section {
     padding-top: 94px;
   }
 }
-@media only screen and (max-width: 1199px) {
-  .work__section {
-    padding-top: 60px;
-  }
-}
 
 .work {
   display: flex;
-  gap: 30px;
   margin: 0;
+  flex-direction: column;
   padding: 0;
-  justify-content: space-between;
   line-height: 1.2;
   color: #212121;
   list-style: none;
 }
-@media only screen and (max-width: 1199px) {
+@media only screen and (min-width: 768px) {
+  .work {
+    flex-direction: row;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   .work {
     flex-wrap: wrap;
   }
 }
+@media only screen and (min-width: 1200px) {
+  .work {
+    gap: 30px;
+  }
+}
+.work__list {
+  margin: 0 0 30px 0;
+}
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   .work__list {
-    width: calc(50% - 30px);
+    width: calc(50% - 15px);
+  }
+  .work__list:nth-child(odd) {
+    margin-right: 30px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .work__list {
+    margin-bottom: 0;
   }
 }
 .work__title {
