--- a/scss/_sizes.scss
+++ b/scss/_sizes.scss
@@ -29,3 +29,9 @@ $desktop: 1200px;
         @content;
     }
 }
+
+@mixin for-tablet-and-desktop {
+    @media only screen and (min-width: 768px) {
+        @content;
+    }
+}
