--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -3,35 +3,59 @@
 
 
 .work__section {
+    padding-top: 60px;
+
     @include for-desktop {
         padding-top: 94px;
     }
 
-    @include for-mobile-and-tablet {
-        padding-top: 60px;
-    }
 }
 
 .work {
     display: flex;
-    gap: 30px;
     margin: 0;
+    flex-direction: column;
     padding: 0;
-    justify-content: space-between;
+
     line-height: 1.2;
     color: $title-text-color;
     list-style: none;
 
-    @include for-mobile-and-tablet {
+
+    @include for-tablet-and-desktop {
+        flex-direction: row;
+
+    }
+
+    @include for-tablet {
         flex-wrap: wrap;
 
     }
 
+    @include for-desktop {
+        gap: 30px;
+    }
+
     &__list {
+        margin: 0 0 30px 0;
+
+
         @include for-tablet {
-            width: calc(100% / 2 - 30px);
+            width: calc(100% / 2 - 15px);
+
+            &:nth-child(odd) {
+                margin-right: 30px;
+            }
+
+        }
+
+        @include for-desktop {
+            margin-bottom: 0;
         }
     }
+
+
+
 
     &__title {
         line-height: 1.15;
