--- a/css/main.css
+++ b/css/main.css
@@ -447,47 +447,55 @@ img {
 }
 
 /* Приклади */
-.examples__title {
-  padding: 0;
-  margin: 0 0 50px 0;
-  font-size: 36px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  text-align: center;
-  color: #212121;
-  letter-spacing: 0.03em;
-}
-.examples__list {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-.examples__item {
-  position: relative;
-}
-.examples__text {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  margin: 0;
-  width: 100%;
-  height: 70px;
-  font-weight: 700;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  background-color: rgba(47, 48, 58, 0.8);
-  color: #FFFFFF;
-}
-.examples__list li:last-child {
-  margin-right: 0;
+.examples {
+  display: none;
 }
 
+@media only screen and (min-width: 1200px) {
+  .examples {
+    display: block;
+  }
+  .examples__title {
+    padding: 0;
+    margin: 0 0 50px 0;
+    font-size: 36px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: #212121;
+    letter-spacing: 0.03em;
+  }
+  .examples__list {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .examples__item {
+    position: relative;
+  }
+  .examples__text {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    width: 100%;
+    height: 70px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    background-color: rgba(47, 48, 58, 0.8);
+    color: #FFFFFF;
+  }
+  .examples__list li:last-child {
+    margin-right: 0;
+  }
+}
 .team {
   background-color: rgb(245, 244, 250);
 }
