--- a/css/main.css
+++ b/css/main.css
@@ -507,23 +507,49 @@ img {
   letter-spacing: 0.03em;
 }
 .team__item {
-  display: flex;
   padding: 0;
   margin: 0;
-  font-size: 36px;
-  line-height: 1.2;
   color: #212121;
   list-style-type: none;
   letter-spacing: 0.03em;
 }
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__item {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .team__item {
+    display: flex;
+  }
+}
 .team__list {
-  margin-right: 30px;
+  margin-bottom: 30px;
   background-color: #FFFFFF;
   border-radius: 4px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
 }
 .team__list:last-child {
-  margin-right: 0;
+  margin-bottom: 0;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__list {
+    width: calc(50% - 15px);
+  }
+  .team__list:nth-child(3) {
+    margin-bottom: 0;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .team__list {
+    margin-bottom: 0;
+    margin-right: 30px;
+  }
+  .team__list:last-child {
+    margin-right: 0;
+  }
 }
 .team__application {
   fill: rgb(175, 177, 184);
