--- a/scss/_our-team.scss
+++ b/scss/_our-team.scss
@@ -12,25 +12,55 @@
     }
 
     &__item {
-        display: flex;
+
         padding: 0;
         margin: 0;
-        font-size: 36px;
-        line-height: 1.2;
         color: $title-text-color;
         list-style-type: none;
         letter-spacing: 0.03em;
+
+        @include for-tablet {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+
+        }
+
+        @include for-desktop {
+            display: flex;
+        }
     }
 
     &__list {
-        margin-right: 30px;
+        margin-bottom: 30px;
         background-color: $body-color;
         border-radius: 4px;
         box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
 
+
         &:last-child {
-            margin-right: 0;
+            margin-bottom: 0;
         }
+
+        @include for-tablet {
+            width: calc(100% / 2 - 15px);
+
+            &:nth-child(3) {
+                margin-bottom: 0;
+            }
+        }
+
+
+        @include for-desktop {
+            margin-bottom: 0;
+            margin-right: 30px;
+
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+
+
 
     }
 
