--- a/scss/_our-team.scss
+++ b/scss/_our-team.scss
@@ -13,10 +13,15 @@
 
     &__title {
         margin: 0 0 50px 0;
-        font-size: 36px;
-        line-height: 1.2;
+        font-size: 28px;
+        line-height: 1.18;
         text-align: center;
         letter-spacing: 0.03em;
+
+        @include for-desktop {
+            font-size: 36px;
+            line-height: 1.2;
+        }
     }
 
     &__item {
@@ -83,9 +88,17 @@
 
     &__device {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         margin-top: 16px;
+        gap: 10px;
+
+        @include for-desktop {
+            justify-content: space-between;
+            gap: 0;
+        }
     }
+
+
 
     &__descr {
         padding: 30px;
@@ -141,4 +154,5 @@
     &:focus .team__application {
         fill: $body-color;
     }
+
 }
