--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./_sizes";
 @import "./_general";
 @import "./_header";
+@import "./burger";
 @import "./_footer";
 @import "./_footer-form";
 @import "./_hero";
