--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
-$title-text-color: #212121;
-$main-color-text: #757575;
-$hover-color: #2196F3;
-$body-color: #FFFFFF;
+$title-text-color: rgb(33, 33, 33);
+$main-color-text: rgb(117, 117, 117);
+$hover-color: rgb(33, 150, 243);
+$body-color: rgb(255, 255, 255);
 $button-background: rgba(245, 244, 250, 1);
 $icon-color: rgba(175, 177, 184, 1);
