--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,16 @@
-@import "./_colors";
-@import "./_mixins";
-@import "./_sizes";
-@import "./_general";
-@import "./_header";
-@import "./burger";
-@import "./_footer";
-@import "./_footer-form";
-@import "./_hero";
-@import "./_work";
-@import "./_examples";
-@import "./_our-team";
-@import "./_clients";
-@import "./_modal";
-@import "./_portfolio-filter";
-@import "./_portfolio-card";
+@import "./utilite/_colors";
+@import "./utilite/_mixins";
+@import "./utilite/_sizes";
+@import "./utilite/_general";
+@import "./components/_header";
+@import "./components/_burger";
+@import "./components/_footer";
+@import "./components/_footer-form";
+@import "./components/_hero";
+@import "./components/_work";
+@import "./components/_examples";
+@import "./components/_our-team";
+@import "./components/_clients";
+@import "./components/_modal";
+@import "./components/_portfolio-filter";
+@import "./components/_portfolio-card";
