--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -5,8 +5,7 @@
     background-color: #2F303A;
     text-align: center;
     padding: 118px 0 128px 0;
-    background-color: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
-    // background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.png);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
