--- a/css/main.css
+++ b/css/main.css
@@ -546,7 +546,7 @@ img {
   background-color: #2F303A;
   text-align: center;
   padding: 118px 0 128px 0;
-  background-color: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -996,15 +996,17 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  z-index: 12;
   transition-duration: 250ms;
   transition-property: opacity, visibility;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
   background-color: rgb(255, 255, 255);
+  width: 450px;
+  max-width: calc(100% - 30px);
+  height: 610px;
   top: 0;
   left: 0;
   right: 0;
@@ -1015,6 +1017,13 @@ img {
   transition-duration: 250ms;
   transition-property: scale;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (min-width: 1200px) {
+  .modal {
+    max-width: none;
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal__close {
   width: 30px;
@@ -1082,10 +1091,15 @@ img {
   margin: 0;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.8;
+  line-height: 1.5;
   text-align: center;
   color: black;
   letter-spacing: 0.03em;
+}
+@media only screen and (min-width: 1200px) {
+  .form__title {
+    line-height: 1.15;
+  }
 }
 .form__label {
   display: block;
@@ -1138,8 +1152,16 @@ img {
   padding: 0;
   padding: 12px 16px;
   resize: none;
-  width: 448px;
+  width: 370px;
   height: 120px;
+  max-width: 100%;
+}
+@media only screen and (min-width: 1200px) {
+  #comment {
+    max-width: none;
+    width: 448px;
+    height: 120px;
+  }
 }
 
 /* чекбокс! */
@@ -1152,7 +1174,12 @@ img {
   display: flex;
   align-items: center;
   gap: 7px;
-  margin: 20px;
+  margin: 20px 0;
+}
+@media only screen and (min-width: 1200px) {
+  .custom__checkbox__label {
+    margin: 20px;
+  }
 }
 .custom__checkbox__link {
   color: rgb(33, 150, 243);
@@ -1182,10 +1209,16 @@ img {
   opacity: 1;
 }
 .custom__checkbox__text {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: rgb(117, 117, 117);
+}
+@media only screen and (min-width: 1200px) {
+  .custom__checkbox__text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .filter {
