--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -15,15 +15,16 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    z-index: 12;
 
     @include transition(opacity, visibility);
 }
 
 .modal {
-    width: 528px;
-    height: 581px;
     background-color: $body-color;
-
+    width: 450px;
+    max-width: calc(100% - 30px);
+    height: 610px;
     top: 0;
     left: 0;
     right: 0;
@@ -33,6 +34,12 @@
     position: absolute;
 
     @include transition(scale);
+
+    @include for-desktop {
+        max-width: none;
+        width: 528px;
+        height: 581px;
+    }
 
     &__close {
         width: 30px;
@@ -117,12 +124,14 @@
         margin: 0;
         font-weight: 700;
         font-size: 20px;
-        line-height: 1.8;
+        line-height: 1.5;
         text-align: center;
         color: black;
         letter-spacing: 0.03em;
 
-
+        @include for-desktop {
+            line-height: 1.15;
+        }
     }
 
     &__label {
@@ -183,8 +192,16 @@
     padding: 0;
     padding: 12px 16px;
     resize: none;
-    width: 448px;
+    width: 370px;
     height: 120px;
+    max-width: 100%;
+
+
+    @include for-desktop {
+        max-width: none;
+        width: 448px;
+        height: 120px;
+    }
 }
 
 
@@ -200,7 +217,11 @@
         display: flex;
         align-items: center;
         gap: 7px;
-        margin: 20px;
+        margin: 20px 0;
+
+        @include for-desktop {
+            margin: 20px;
+        }
     }
 
     &__link {
@@ -238,9 +259,14 @@
     }
 
     &__text {
-        font-size: 14px;
-        line-height: 1.71;
+        font-size: 12px;
+        line-height: 1.16;
         letter-spacing: 0.03em;
         color: rgba(117, 117, 117, 1);
+
+        @include for-desktop {
+            font-size: 14px;
+            line-height: 1.71;
+        }
     }
 }
