--- a/css/main.css
+++ b/css/main.css
@@ -554,22 +554,22 @@ img {
 }
 @media only screen and (max-width: 767px) {
   .hero {
-    background-image: url(/images/header/header-img-xs-min.jpg);
+    background-image: url(../images/header/header-img-xs-min.jpg);
   }
 }
 @media only screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), only screen and (max-width: 767px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: url(/images/header/header-img-s-min.jpg);
+    background-image: url(../images/header/header-img-s-min.jpg);
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   .hero {
-    background-image: url(/images/header/header-img-m-min.jpg);
+    background-image: url(../images/header/header-img-m-min.jpg);
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: url(/images/header/header-img-l-min.jpg);
+    background-image: url(../images/header/header-img-l-min.jpg);
   }
 }
 @media only screen and (min-width: 1200px) {
@@ -577,12 +577,12 @@ img {
     max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url(/images/header/header-img-xl-min.jpg);
+    background-image: url(../images/header/header-img-xl-min.jpg);
   }
 }
 @media only screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 1200px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: url(/images/header/header-img-xxl-min.jpg);
+    background-image: url(../images/header/header-img-xxl-min.jpg);
   }
 }
 .hero__title {
